--- a/Opengl_projet/Opengl_projet.vcxproj.filters
+++ b/Opengl_projet/Opengl_projet.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="CollisionData.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Sphere.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Shader.h">
@@ -78,6 +81,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="CollisionData.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Sphere.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
