--- a/Opengl_projet/Opengl_projet.vcxproj
+++ b/Opengl_projet/Opengl_projet.vcxproj
@@ -71,10 +71,13 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>C:\Users\GTHR\Downloads\glad_folder\include;C:\Users\GTHR\Downloads\glm-0.9.9.8_folder\glm-0.9.9.8;$(IncludePath)</IncludePath>
+    <IncludePath>D:\WorkPlace\OpenGLProjects\include;D:\WorkPlace\OpenGLProjects\Repos\GraphicsFinal\Opengl_projet\glfw_include;D:\WorkPlace\OpenGLProjects\Repos\GraphicsFinal\Opengl_projet\include;$(IncludePath)</IncludePath>
+    <PublicIncludeDirectories>D:\WorkPlace\OpenGLProjects\Repos\GraphicsFinal\Opengl_projet\glfw_include;D:\WorkPlace\OpenGLProjects\Repos\GraphicsFinal\Opengl_projet\include;$(IncludePath)</PublicIncludeDirectories>
+    <LibraryPath>D:\WorkPlace\OpenGLProjects\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <IncludePath>C:\Users\GTHR\Downloads\glad_folder\include;$(IncludePath)</IncludePath>
+    <IncludePath>D:\WorkPlace\OpenGLProjects\Repos\GraphicsFinal\Opengl_projet\include;$(IncludePath)</IncludePath>
+    <LibraryPath>D:\WorkPlace\OpenGLProjects\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -130,7 +133,8 @@
       <AdditionalIncludeDirectories>C:\Users\GTHR\Downloads\glfw-3.3.8.bin.WIN64\glfw-3.3.8.bin.WIN64\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>
+      </SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
