--- a/Opengl_projet/Opengl_projet.vcxproj
+++ b/Opengl_projet/Opengl_projet.vcxproj
@@ -165,6 +165,8 @@
     <ClInclude Include="ThreeDimensionalFigure.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="lamp.frag" />
+    <None Include="lamp.vert" />
     <None Include="shader.frag" />
     <None Include="shader.vert" />
   </ItemGroup>
